# miyuki.foundation

./: .gitmodules  CMakeLists.txt  README.md
include/miyuki.foundation/: arena.hpp  array.hpp  defs.h  film.h  foundation.h  image.hpp  imageloader.h  interfaces.h  math.hpp  mpsc.hpp  object.hpp  property.hpp  serialize.hpp  spectrum.h  vectorize.hpp
include/miyuki.foundation/detail/: object-funcs.h
src/: film.cpp  imageloader.cpp  parallel.cpp  serialize.cpp
