cmake_minimum_required(VERSION 3.1)

project(miyuki.foundation)
set(CMAKE_CXX_STANDARD  17)
add_subdirectory(external/fmt)
add_subdirectory(external/glfw)

file(GLOB libSRC src/*.* src/*/*.* include/*/*.*)
add_library(foundation ${libSRC} external/lodepng/lodepng.cpp external/lodepng/lodepng_util.cpp include/miyuki.foundation/mpsc.hpp)
target_include_directories(foundation PUBLIC include/)
target_include_directories(foundation PUBLIC external/cereal/include)
target_include_directories(foundation PUBLIC external/glm)
target_include_directories(foundation PUBLIC external/json/include)
target_include_directories(foundation PUBLIC external/stb)
target_include_directories(foundation PUBLIC external/fmt/include)
target_include_directories(foundation PUBLIC external/lodepng)
target_include_directories(foundation PUBLIC external/glfw/include)
target_link_libraries(foundation glfw fmt)

add_library(asio external/asio/asio/src/asio.cpp)
target_include_directories(asio PUBLIC external/asio/asio/include/)
target_compile_definitions(asio PUBLIC ASIO_SEPARATE_COMPILATION)